# gnbg-optimization-base

./: .gitignore  AGENTS.md  PROMPT.md  README.md  candidate.py  gnbg_harness.py  pyproject.toml  run_candidate.py
benchmarks/gnbg/: loader.py
benchmarks/gnbg/official/: GNBG_instances.py
candidates/: candidate_claude_sonnet_4_6.py  candidate_codex_ji.py  candidate_codex_wa.py  llm_shade_inspired.py
