[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gnbg-optimization-base"
version = "0.1.0"
description = "Minimal GNBG + IOH harness for agent-generated algorithms"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0",
  "ioh>=0.3.18",
  "iohgnbg",
]
